# PESUIO-RAG

./: .gitignore
Assignment-1/: README.md
Assignment-1/PDF/: main.py
Assignment-1/Website/: main.py
NaiveRAG/: main.py  main2.py
assignment_2/: README.md  pyproject.toml
assignment_2/src/assignment_2/: crew.py  main.py
assignment_2/src/assignment_2/config/: agents.yaml  tasks.yaml
