[project]
name = "assignment_2"
version = "0.1.0"
description = "Assignment-2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
assignment_2 = "assignment_2.main:run"
run_crew = "assignment_2.main:run"
train = "assignment_2.main:train"
replay = "assignment_2.main:replay"
test = "assignment_2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
